2005-04-16 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b2

	* Fix: HTML validation in view_photo.php, login.php

	* Change: Added parameter to drawSelect for pretty printing.

	* Change: Album properties are displayed in tabs.

	* CHANGE: data structure of print services.
		  reconfig forced and album version bumped.

	  Note: code not finished ! Previous Values from config for print services not used.

	* Change: eCard template changes 

	* Change: Modified eCard feature... 

	* Change: Show Albumnames in pulldown for reorder album.

	* New: Added eCard Feature. (not completed yet.)

	* New: Added more placeholders in Welcome Msg. Used Patch #847436 as inspiration.

	* Change: Inform user when display of exifdate is enabled, but nothing found.
	  (to avoid confusion)

	* Change: Added Patch #842580 from Kennichi Uehara 'email transfer encoding to base64'

2005-04-14  Jay Rossiter <cryptographite@users.sf.net>  1.5.1-cvs-b1

	* Fix: Address PHP5 behavior change to unsetting string values

2005-04-13  Chris Kelly <ckdake@users.sf.net>  1.5

	* 1.5 Release
	
2005-04-13  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC4-cvs-b10

	* Change: New breadcrumb needed updating in slideshow and view_captions

2005-04-13  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC4-cvs-b9

	* Change: Remove EZPrints as an option for print providers at their
	  request.  Migrate all EZPrints users to Shutterfly.

	* Fix: Bypass annoying PHP5 bug for isset($var->unset['unset'])

	* Fix: Modify fs_file_get_contents() to simulate file_get_contents
	  if it doesn't exist.  GR was using file_get_contents without verifying
	  support first.

2005-04-13  Jens A. Tkotz <jens@peino.de>  1.5-RC4-CVS-b8

	* Fix: Album Navigation ignored returnto=no in the middle.
	       Result was that anytime the full line was showed.

2005-04-11  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC4-cvs-b7

	* Fix: getFile() failed to call fs_import_filename on Windows when