@@ -268,7 +268,7 @@ a.error:hover {
 	 {
 	   text-align:center;
 	   font-size: 12px;
-	   font-weight: none;
+	   font-weight: normal;
 	   padding: 5px;
 	   margin-bottom: 10px;  
 	 }
@@ -276,7 +276,7 @@ a.error:hover {
 .popupform /* controls form textarea */
 	 {
 	   font-size: 12px;
-	   font-weight: none;
+	   font-weight: normal;
 	   line-height: 120%;
 	   padding: 2px;
 	 }
