@@ -272,7 +272,7 @@ textarea:focus, input:focus, select:focus {
 	 {
 	   text-align:center;
 	   font-size: 12px;
-	   font-weight: none;
+	   font-weight: normal;
 	   color: #202020;
 	   padding: 5px;
 	   border: 1px solid #FFF;
@@ -283,7 +283,7 @@ textarea:focus, input:focus, select:focus {
 .popupform /* controls form textarea */
 	 {
 	   font-size: 12px;
-	   font-weight: none;
+	   font-weight: normal;
 	   line-height: 120%;
 	   color: #202020;
 	   padding: 2px;
