@@ -25,7 +25,7 @@ else {
 }
 if (!includeTemplate('gallery.header.tpl')) {
 ?>
-<table width="100%" border="0">
+<table width="100%" border="0" cellpadding="0" cellspacing="0">
   <tr>
     <td>
       <table cellpadding="0" cellspacing="0" width="100%" border="0" align="center" class="mod_headliner">
