@@ -423,7 +423,7 @@ input:focus {
 .popup /* controls the main text and message body */
 {
     text-align:center;
-    font-size: 12px; font-weight: none;
+    font-size: 12px; font-weight: normal;
     color: #202020;
     padding: 5px;
     border: 1px solid #000000;
@@ -434,7 +434,7 @@ input:focus {
 .popupform /* controls form textarea */
 	 {
 	   font-size: 12px;
-	   font-weight: none;
+	   font-weight: normal;
 	   line-height: 120%;
 	   color: #202020;
 	   padding: 2px;
