@@ -414,7 +414,7 @@ a.modcaption:hover {
 .popup /* controls the main text and message body */
 {
     text-align:center;
-    font-size: 12px; font-weight: none;
+    font-size: 12px; font-weight: normal;
     color: #202020;
     padding: 5px;
     border: 1px solid #000000;
