@@ -1,3 +1,9 @@
+2005-04-17 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b3
+
+	* Fix: invalid css in standalone css and some skins. (Thanks to pixelpoet)
+
+	* Change: Added cellpadding="0" cellspacing="0" to starting tables in html_wrap/*.header.default
+
 2005-04-16 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b2
 
 	* Fix: HTML validation in view_photo.php, login.php
